@@ -2,16 +2,17 @@
 <object>
   <order manager="plone.portaltop" skinname="Plone Default">
     <viewlet name="plone.header" />
-    <viewlet name="plone.personal_bar" />
-    <viewlet name="plone.app.i18n.locales.languageselector" />
-    <viewlet name="plone.path_bar" />
   </order>
   <order manager="plone.portalheader" skinname="Plone Default">
     <viewlet name="plone.skip_links" />
-    <viewlet name="plone.site_actions" />
+    <viewlet name="plone.personal_bar" />
+    <viewlet name="plone.app.i18n.locales.languageselector" />
     <viewlet name="plone.searchbox" />
     <viewlet name="plone.logo" />
     <viewlet name="plone.global_sections" />
+  </order>
+  <order manager="plone.abovecontent" skinname="Plone Default">
+    <viewlet name="plone.path_bar" />
   </order>
   <order manager="plone.contentviews" skinname="Plone Default">
     <viewlet name="plone.contentviews" />
@@ -22,11 +23,13 @@
     <viewlet name="plone.abovecontenttitle.documentactions" />
   </order>
   <order manager="plone.belowcontent" skinname="Plone Default">
+    <viewlet name="plone.belowcontenttitle.keywords" />
     <viewlet name="plone.nextprevious" />
     <viewlet name="plone.manage_portlets_fallback" />
   </order>
   <order manager="plone.portalfooter" skinname="Plone Default">
     <viewlet name="plone.footer" />
     <viewlet name="plone.colophon" />
+    <viewlet name="plone.site_actions" />
   </order>
 </object>
